--- a/resources/logg.qrc
+++ b/resources/logg.qrc
@@ -1,6 +1,6 @@
 <RCC>
   <qresource prefix="/">
     <file>ico2.png</file>
-    <file>ProximaNova.ttf</file>
+    <file>ProximaNova_rg.ttf</file>
   </qresource>
 </RCC>
